--- a/config/database.yml
+++ b/config/database.yml
@@ -72,14 +72,11 @@ test:
 # the values provided in this file. Alternatively, you can specify a connection
 # URL environment variable explicitly:
 #
-#   production:
-#     url: <%= ENV["MY_APP_DATABASE_URL"] %>
-#
-# Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
-# for a full overview on how database connection configuration can be specified.
-#
 production:
-  <<: *default
-  database: blog_app_production
-  username: blog_app
-  password: <%= ENV["BLOG_APP_DATABASE_PASSWORD"] %>
+ adapter: postgresql
+ encoding: unicode 
+ pool: 5
+ database: <%= ENV["DB_NAME"] %>
+ username: <%= ENV["DB_USER"] %>
+ password: <%= ENV["DB_PASSWORD"] %>
+ host: <%= ENV["DB_HOST"] %>
