--- a/config/database.yml
+++ b/config/database.yml
@@ -85,7 +85,7 @@ test:
 production:
   <<: *default
   database: blog_app_production
-  username: <%= SecretsManager.get_secret('blog-app/production/database')['username'] rescue 'blog_user' %>
-  password: <%= SecretsManager.get_secret('blog-app/production/database')['password'] rescue ENV['DB_PASSWORD'] %>
-  host: <%= SecretsManager.get_secret('blog-app/production/database')['host'] rescue ENV['DB_HOST'] %>
-  port: <%= SecretsManager.get_secret('blog-app/production/database')['port'] rescue 5432 %>
+  username: <%= SecretsManager.get_secret('blog-app/production/database')['username']%>
+  password: <%= SecretsManager.get_secret('blog-app/production/database')['password']%>
+  host: <%= SecretsManager.get_secret('blog-app/production/database')['host']%>
+  port: <%= SecretsManager.get_secret('blog-app/production/database')['port']%>
