--- a/config/storage.yml
+++ b/config/storage.yml
@@ -13,6 +13,16 @@ amazon:
   region: <%= Rails.application.credentials.dig(:aws, :region) %>
   bucket: <%= Rails.application.credentials.dig(:aws, :bucket) %>
 
+amazon:
+  service: S3
+  <% s3_secrets = (SecretsManager.get_secret('blog-app/production/s3') rescue nil) || {} %>
+  access_key_id: <%= s3_secrets['access_key_id'] || Rails.application.credentials.dig(:aws, :access_key_id) %>
+  secret_access_key: <%= s3_secrets['secret_access_key'] || Rails.application.credentials.dig(:aws, :secret_access_key) %>
+  region: <%= s3_secrets['region'] || Rails.application.credentials.dig(:aws, :region) || "us-east-1" %>
+  bucket: <%= s3_secrets['bucket'] || Rails.application.credentials.dig(:aws, :bucket) %>
+
+
+
 # Remember not to checkin your GCS keyfile to a repository
 # google:
 #   service: GCS
