--- a/config/storage.yml
+++ b/config/storage.yml
@@ -13,7 +13,8 @@ amazon:
   secret_access_key: <%= s3_secrets['secret_access_key']%>
   region: <%= s3_secrets['region']%>
   bucket: <%= s3_secrets['bucket']%>
-  prefix: uploads
+  upload:
+    prefix: uploads
 
 
 
